# follow_tutorial_coding_agent

./: checkpoints.db-shm  checkpoints.db-wal  code.ipynb  crag.ipynb  custom_persistence.ipynb  db_output.txt  db_output_utf8.txt  human_in_the_loop.ipynb  human_in_the_loop_B.ipynb  inspect_db.py  main.py  manage_db.py  pyproject.toml  some_python_basics.ipynb  transcript.py
data/chroma_db/: chroma.sqlite3
jottings/: learn_repl.md  手写代码挑战练习_2025-12-06.md
